2008-11-24  Dan Williams  <dcbw@redhat.com>

	Patch from Tony Houghton <h@realh.co.uk>  (bgo #455250)

	* src/applet.c
	  src/applet.h
		- (applet_do_notify_with_pref): add notification helper for connect/
			disconnect messages with a "disable me" button
		- (foo_client_state_changed_cb): add ability to disable disconnected
			notification too
		- (applet_do_notify): set default timeout for notifications

	* src/applet-device-cdma.c
	  src/applet-device-gsm.c
	  src/applet-device-wifi.c
	  src/applet-device-wired.c
		- Use applet_do_notify_connect_state()

2008-11-21  Dan Williams  <dcbw@redhat.com>

	* src/applet-dialogs.c
		- (ip4_address_as_string): use inet_ntop() instead of inet_ntoa()

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
		- (vpn_helpers_save_secret): helper to save VPN secrets
		- (nm_gconf_0_6_vpnc_settings): try to convert NM-vpnc 0.6 secrets

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
		- (get_06_keyring_secret): get an NM 0.6 secret from the keyring
		- (nm_gconf_read_0_6_wep_settings, nm_gconf_read_0_6_wpa_settings,
		   nm_gconf_read_0_6_eap_settings, nm_gconf_read_0_6_leap_settings,
		   nm_gconf_read_0_6_wireless_connection): attempt to convert NM 0.6
			secrets to NM 0.7 format

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (wireless_get_secrets): really fix focus stealing prevention for real

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (read_one_setting_value_from_gconf, write_one_secret_to_keyring,
		   copy_one_setting_value_to_gconf): update for NMSettingValueIterFn
			changes	
		- (copy_one_setting_value_to_gconf): remove bits than set secrets in
			the keyring which couldn't possibly be called from here

2008-11-20  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-helpers.c
		- (string_in_list): implement locally now that nm_utils_string_in_list
			was removed from libnm-util
